RESOLVED FIXED277595
Image decode failures should not be WebKit internal errors
https://bugs.webkit.org/show_bug.cgi?id=277595
Summary Image decode failures should not be WebKit internal errors
Alex Christensen
Reported 2024-08-03 15:33:57 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-03 15:34:19 PDT
Alex Christensen
Comment 2 2024-08-03 15:43:03 PDT
EWS
Comment 3 2024-08-03 20:21:09 PDT
Committed 281813@main (cd58fda2512a): <https://commits.webkit.org/281813@main> Reviewed commits have been landed. Closing PR #31694 and removing active labels.
EWS
Comment 4 2024-08-07 16:31:14 PDT
Committed 280938.204@safari-7619-branch (21b2485ef0ab): <https://commits.webkit.org/280938.204@safari-7619-branch> Reviewed commits have been landed. Closing PR #1569 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.