Image decode failures should not be WebKit internal errors https://bugs.webkit.org/show_bug.cgi?id=277595 rdar://133136320

Reviewed by Tim Horton.

If an image fails to decode, that should not be reported as an internal error,
it should be a decode error. Otherwise we get these in stderr:
ERROR: WebKit encountered an internal error. This is a WebKit bug.

Also, the process was getting shut down during the message, so in practice
if an image took more than a moment to load it would fail.  I manually verified
that adding preventProcessShutdownScope to the message fixes this issue.

* Source/WebKit/Shared/Cocoa/WebErrorsCocoa.mm:
(WebKit::decodeError):
* Source/WebKit/Shared/WebErrors.cpp:
(WebKit::decodeError):
* Source/WebKit/Shared/WebErrors.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadAndDecodeImage):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAndDecodeImage.mm:
(TestWebKitAPI::TEST(WebKit, LoadAndDecodeImage)):

Canonical link: https://commits.webkit.org/281813@main